--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@solana/web3.js": "^1.98.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
+    "@tinymce/tinymce-react": "^6.1.0",
     "blob-stream": "^0.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -51,6 +52,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "ethers": "^5.7.2",
+    "framer-motion": "^12.7.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -77,6 +79,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@types/tinymce": "^4.6.9",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
